@@ -1,3 +1,5 @@
+  * Added two new internal functions for the encoding and decoding of
+    base64 in a buffer (including cleanup of wbxml_encoder.c).
   * Added test for ticket #75 (formatted base64 string in binary tag).
   * Failing tests do no longer remove their temporary data.
   * Fixed wrong opaque conversion from WBXML to XML (never normalize
